<resources>
    <string name="app_name">YelloMarket</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="name">박차오름</string>

    <string name="navi_home">홈</string>
    <string name="navi_invitation">초대하기</string>
    <string name="navi_notice">알림</string>
    <string name="navi_channel">채널 만들기</string>
    <string name="navi_setting">설정</string>

</resources>
